# PPRG-CWICZENIA

./: .gitignore  CMakeLists.txt  main.cpp
zjazd_1/: ZD_1-1.cpp  ZD_1-2.cpp  ZD_1-3.cpp  ZD_1-4.cpp
zjazd_1/ZD_1-1/: ZD_1-1.cpp  ZD_1-1.h
zjazd_1/ZD_1-2/: ZD_1-2.cpp  ZD_1-2.h
zjazd_1/ZD_1-3/: ZD_1-3.cpp  ZD_1-3.h
zjazd_1/ZD_1-4/: ZD_1-4.cpp  ZD_1-4.h
zjazd_2/ZD_2-0/: ZD_2.cpp  ZD_2.h
zjazd_2/ZD_2-1/: ZD_2-1.cpp
zjazd_2/ZD_2-2/: ZD_2-2a.cpp  ZD_2-2b.cpp  ZD_2-2c.cpp  ZD_2-2d.cpp  ZD_2-2e.cpp  ZD_2-2f.cpp  ZD_2-2g.cpp
zjazd_2/ZD_2-3/: ZD_2-3.cpp
zjazd_2/ZD_2-4/: ZD_2-4.cpp
zjazd_3/ZD_3-1/: ZD_3-1.cpp
zjazd_3/ZD_3-2/: ZD_3-2.cpp
zjazd_3/ZD_3-3/: ZD_3-3.cpp
zjazd_3/ZD_3-4/: ZD_3-4.cpp
zjazd_4/ZD_4-1/: ZD_4-1.cpp
zjazd_4/ZD_4-2/: ZD_4-2.cpp
zjazd_4/ZD_4-3/: ZD_4-3.cpp
zjazd_5/ZD_5-1/: ZD_5-1.cpp
zjazd_5/ZD_5-2/: ZD_5-2.cpp
zjazd_6/ZD_6-1/: ZD_6-1.cpp
zjazd_6/ZD_6-2/: ZD_6-2.cpp
zjazd_6/ZD_6-3/: ZD_6-3.cpp
zjazd_6/ZD_6-4/: ZD_6-4.cpp
zjazd_7/ZD_7-1/: ZD_7-1.cpp
zjazd_7/ZD_7-2/: ZD_7-2.cpp
zjazd_7/ZD_7-3/: ZD_7-3.cpp
zjazd_8/kalkulator_macierzowy/: kalkulator.cpp
