cmake_minimum_required(VERSION 3.29)
project(PPRG_CWICZENIA)

set(CMAKE_CXX_STANDARD 20)

add_executable(PPRG_CWICZENIA main.cpp
        zjazd_1/ZD_1-1/ZD_1-1.cpp
        zjazd_1/ZD_1-2/ZD_1-2.cpp
        zjazd_1/ZD_1-3/ZD_1-3.cpp
        zjazd_1/ZD_1-4/ZD_1-4.cpp
        zjazd_1/ZD_1-4/ZD_1-4.h
        zjazd_1/ZD_1-1/ZD_1-1.h
        zjazd_1/ZD_1-2/ZD_1-2.h
        zjazd_1/ZD_1-3/ZD_1-3.h
        zjazd_2/ZD_2-0/ZD_2.cpp
        zjazd_2/ZD_2-0/ZD_2.h)
