cmake_minimum_required(VERSION 3.29)
project(PPRG_CWICZENIA)

set(CMAKE_CXX_STANDARD 20)

add_executable(PPRG_CWICZENIA main.cpp
        zjazd_1/ZD_1-1/ZD_1-1.cpp
        zjazd_1/ZD_1-2/ZD_1-2.cpp
        zjazd_1/ZD_1-3/ZD_1-3.cpp
        zjazd_1/ZD_1-4/ZD_1-4.cpp
        zjazd_1/ZD_1-4/ZD_1-4.h
        zjazd_1/ZD_1-1/ZD_1-1.h
        zjazd_1/ZD_1-2/ZD_1-2.h
        zjazd_1/ZD_1-3/ZD_1-3.h
        zjazd_2/ZD_2-0/ZD_2.cpp
        zjazd_2/ZD_2-0/ZD_2.h
        zjazd_2/ZD_2-1/ZD_2-1.cpp
        zjazd_2/ZD_2-2/ZD_2-2a.cpp
        zjazd_2/ZD_2-2/ZD_2-2b.cpp
        zjazd_2/ZD_2-2/ZD_2-2c.cpp
        zjazd_2/ZD_2-2/ZD_2-2d.cpp
        zjazd_2/ZD_2-2/ZD_2-2e.cpp
        zjazd_2/ZD_2-2/ZD_2-2f.cpp
        zjazd_2/ZD_2-2/ZD_2-2g.cpp
        zjazd_2/ZD_2-3/ZD_2-3.cpp
        zjazd_2/ZD_2-4/ZD_2-4.cpp
        zjazd_3/ZD_3-1/ZD_3-1.cpp
        zjazd_3/ZD_3-2/ZD_3-2.cpp
        zjazd_3/ZD_3-3/ZD_3-3.cpp
        zjazd_3/ZD_3-4/ZD_3-4.cpp
        zjazd_4/ZD_4-1/ZD_4-1.cpp
        zjazd_4/ZD_4-2/ZD_4-2.cpp
        zjazd_4/ZD_4-3/ZD_4-3.cpp
        zjazd_5/ZD_5-1/ZD_5-1.cpp
        zjazd_5/ZD_5-2/ZD_5-2.cpp
)
